--- a/aula 05/index.html
+++ b/aula 05/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <script>
-        
-        var canal="CFB Cursos";
-        var curso="Curso de Javascript"
-        const separador=" - ";
-        const quebra="\n"; // quebra de linha no ALERT, você pode colocar quantos \n vc quiser. 
 
-        alert(canal + quebra + curso)
+        var canal="CFB Cursos"
+
+        var nome=prompt("Digite Seu Nome",canal)
+        confirm(`Tem certeza que deseja entrar nessa página Senhor ${nome}`)
+        document.write(`Obrigado por entrar na nossa página <br>Seja Bem Vindo Senhor <B>${nome}</B>`)
     </script>
 </body>
 </html>
