--- a/aula 06/index.html
+++ b/aula 06/index.html
@@ -8,13 +8,9 @@
 </head>
 <body>
     <script>
-        
-        var canal="CFB Cursos";
-        var curso="Curso de Javascript"
-        const separador=" - ";
-        const quebra="\n"; // quebra de linha no ALERT, você pode colocar quantos \n vc quiser. 
-
-        alert(canal + quebra + curso)
+        var nome=prompt("Digite Seu Nome");
+        var res=confirm(nome+" Deseja Continuar?");
+        alert(res)
     </script>
 </body>
 </html>
