--- a/aula 30/index.html
+++ b/aula 30/index.html
@@ -7,7 +7,44 @@
 </head>
 <body>
     <script>
+        //RECEBENDO PARAMETROS, RRETORNANDO UM VALOR, MAS RECEBENDO UM ARRAY
+        var numeros=new Array(1,2,3)
+
+        function media(nums){
+            var tam=nums.length;
+            var soma=0;
+            for(var i=0; i<tam; i++){
+                soma+=nums[i];
+            }
+            return Math.round(soma/tam);
+        }
+        document.write(media(numeros));
         
+        //------------------------------------------- 
+       //FORMA DE FUNÇAO RECEBENDO PARAMETROS E RETORNANDO UM VALOR
+        function soma2(n1,n2){
+            return n1+n2; // O res nao é obrigatorio
+        }
+        var res=soma(7,7);
+        document.write(res);
+        
+        //---------------------------------------------
+        //FORMA DE FUNÇAO RECEBENDO PARAMETROS
+        function soma(n1,n2){
+            var res=n1+n2;
+            document.write(res+"<br>");
+        }
+        soma(5,2);
+        soma(10,20)
+        soma(0,1)
+
+        //----------------------------------------------
+        // FORMA SIMPLES, SEM PARAMETROS E SEM RETORNO
+        function escreve(){
+            document.write("Curso de Javascript - CFB Cursos")
+        }
+        escreve();
+
     </script>
 
 </body>
