--- a/aula 31/index.html
+++ b/aula 31/index.html
@@ -3,44 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula 31</title>
 </head>
 <body>
     <script>
-        /*
-    categorias = {
-        "Leve": (0, 55),
-        "Meio-Médio": (55, 65),
-        "Médio": (65, 75),
-        "Meio-Pesado": (75, 85),
-        "Pesado": (85, float('inf'))
-    }
-    */
 
-    var pos
+      var nomeCor="Vermelho";
+      var i=0;
+      
+        function cor(){
+            var nomeCor="Azul"
+            document.write(this.nomeCor+"<br>"+nomeCor+"<br>");
+        }
 
-    let peso1=55;
-    let peso2=56;
+        cor();
+        for(var i=0;i<10;i++){}
 
-    if(peso1,peso2 <55){
-        pos=1
-    } else {
-        pos=2
-    }
+        document.write(i+"<br>")
 
-    if(peso1,peso2 >=55 &&peso1,peso2 < 65){
-        pos=1
-    } else{
-        pos=2
-    }
-
-    switch(pos){
-        case 1:
-            console.log("podem lutar")
-            break
-        case 2:
-            console.log("nao podem lutar")
-    }
    
     </script>
 </body>
