--- a/aula 32/index.html
+++ b/aula 32/index.html
@@ -12,12 +12,36 @@
         }
     </style>
     <script>
+
+        function mudaCor(obj,cor){
+            obj.style.backgroundColor=cor;
+        }
+
+        function mudaPos(obj){
+            obj.style.position="absolute";
+            obj.style.left=Math.random()*500+"px";
+            obj.style.top=Math.random()*500+"px";
+        }
+
+        function ola(){
+            var data=new Date();
+            var hora=data.getHours();
+            var txt="";
+            if(hora < 12){
+                txt="Bom Dia";
+            } else if(hora < 18){
+                txt="Boa Tarde";
+            } else{
+                txt="Boa Noite";
+            }
+            alert("Olá "+txt);
+        }
          
     </script>
 </head>
-<body>
-    <div id="dv1"></div>
+<body onload="ola()">
+    <div id="dv1" onmouseover="mudaCor(this,'#f00')" onmouseout="mudaCor(this,'#fff')"></div>
     <br>
-    <button>Clique em mim</button>
+    <button onclick="alert('CFB Cursos')" onmouseover="mudaPos(this)">Clique em mim</button>
 </body>
 </html>
