--- a/aula 35/index.html
+++ b/aula 35/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula 35</title>
+    <style>
+        #dv1{
+            width: 100px;
+            height: 100px;
+            border: 1px solid #000;
+            background-color: #fff;
+        }
+    </style>
+    <script>
+
+        var tmp;
+
+        function mudaCor(){
+            var obj=document.getElementById("dv1")
+            var r=Math.floor(Math.random()*255);
+            var g=Math.floor(Math.random()*255);
+            var b=Math.floor(Math.random()*255);
+            obj.style.backgroundColor="rgb("+r+","+g+","+b+")";
+        }
+
+        //var tmp=setTimeout(mudaCor,1000);
+        function iniciar(){
+            tmp=setInterval(mudaCor,200);
+        }
+
+        function parar(){
+            clearInterval(tmp);
+        }
+
+        function addEventos(){
+            document.getElementById("bt1").addEventListener("click",iniciar)
+            document.getElementById("bt2").addEventListener("click",parar)
+        }
+        
+        window.addEventListener("load",addEventos)
+
+    </script>
 </head>
 <body>
-    
+    <div id="dv1"></div>
+    <br>
+    <button id="bt1">Iniciar</button>
+    <button id="bt2">Parar</button>
 </body>
 </html>
