--- a/aula 37/index.html
+++ b/aula 37/index.html
@@ -4,8 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 37</title>
+    <style>
+        #dv1{
+            width: 100px;
+            height: 100px;
+            border: 1px solid #000;
+            background-color: #f00;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+        }
+    </style>
+    <script>
+
+        var px;
+        var py;
+        var dx;
+        var dy;
+        var vel;
+        var obj;
+        var tmp;
+
+        function inicia(){
+            px=0
+            py=0
+            dx=0
+            dy=0
+            vel=1
+            obj=document.getElementById("dv1")
+            document.addEventListener("keydown",teclaDw)
+            document.addEventListener("keyup",teclaUp)
+            tmp=setInterval(enterFrame,1)
+        }
+
+        function teclaDw(){
+            var tecla=event.keyCode
+            if(tecla==37){
+                dx=-1;
+            }else if(tecla==38){
+                dy=-1;
+            }else if(tecla==39){
+                dx=1;
+            }else if(tecla==40){
+                dy=1;
+            }
+        }
+
+        function teclaUp(){
+            var tecla=event.keyCode
+            if(tecla==37){
+                dx=0;
+            }else if(tecla==38){
+                dy=0;
+            }else if(tecla==39){
+                dx=0;
+            }else if(tecla==40){
+                dy=0;
+            }
+        }
+
+        function enterFrame(){
+            px+=dx*vel;
+            py+=dy*vel;
+            obj.style.left=px+"px"
+            obj.style.top=py+"px"
+        }
+
+        window.addEventListener("load",inicia)
+
+    </script>
 </head>
 <body>
+
+    <div id="dv1"></div>
     
 </body>
 </html>
