--- a/aula 41/index.html
+++ b/aula 41/index.html
@@ -15,13 +15,42 @@
     <script>
 
         function contador(min,max){
-            document.write(min="<br>");
-            
+            document.write(min+"<br>");
+            if(min<max){
+                contador(++min,max);
+            }
         }
+
+        //contador(10,30);
+
+        function fatorial(n){
+            if(n==1){  
+                return 1;
+            }
+            return n*fatorial(n-1);
+        }
+        //document.write(fatorial(10));
+        //fatorial = 5! 5*4*3*2*1 = 120
+
 
     </script>
 </head>
 <body>
     <div id="quad"></div>
+
+    <script>
+        var obj=document.getElementById("quad");
+        var ang=0;
+        var anima;
+        function gira(){
+            obj.style.transform="rotate("+ang+"deg)";
+            ang++;
+            if(ang>360){
+                ang=0;
+            }
+            anima=requestAnimationFrame(gira);
+        }
+        gira();
+    </script>
 </body>
 </html>
