--- a/aula 47/index.html
+++ b/aula 47/index.html
@@ -6,6 +6,15 @@
     <title>Aula 47</title>
 </head>
 <body>
-    
+    <p id="txt">CFB Cursos - Curso de Javascript</p>
+
+    <script>
+        var texto=document.getElementById("txt").innerHTML;
+        var txt2=" - Texto de teste";
+
+        var res=texto.concat(" - aula 46 do curso de javascript" + txt2);
+
+        document.write(res);
+    </script>
 </body>
 </html>
