--- a/aula 51 a 56/aula 52/index.html
+++ b/aula 51 a 56/aula 52/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOGO DA VELHA</title>
+    <title>JOGO DA VELHA P2</title>
     <style>
         #dvjogo{
             width: 160px;
@@ -63,6 +63,40 @@
     </style>
     <script>
 
+        var jogo=[];
+        var tabuleiro=[];
+        var quemJoga=0;//0=jogador   1=cpu
+        var verifica;
+        var jogando=true;
+        var nivel=1;
+        var jogadaCpu=1;
+        var quemComeca=1;
+
+        function jogar(p){
+             if((jogando)&&(quemJoga==0)){
+                switch(p){
+                    case 1:
+                        if(jogo[0][0]==""){
+                            jogo[0][0]="X";
+                            quemJoga=1
+                        }
+                    break;
+                }
+             }
+        }
+
+        function inicia(){
+            jogando=true;
+            jogadaCpu=1;
+            jogo=[
+                ["","",""],
+                ["","",""],
+                ["","",""]
+            ];
+        }
+
+        window.addEventListener("load",inicia);
+
     </script>
 </head>
 <body>
@@ -72,15 +106,15 @@
         <button onclick="">Iniciar Jogo</button>
     </div>
     <div id="dvjogo">
-        <div id="p1" class="posJogo" onclick=""></div>
-        <div id="p2" class="posJogo" onclick=""></div>
-        <div id="p3" class="posJogo" onclick=""></div>
-        <div id="p4" class="posJogo" onclick=""></div>
-        <div id="p5" class="posJogo" onclick=""></div>
-        <div id="p6" class="posJogo" onclick=""></div>
-        <div id="p7" class="posJogo" onclick=""></div>
-        <div id="p8" class="posJogo" onclick=""></div>
-        <div id="p9" class="posJogo" onclick=""></div>
+        <div id="p1" class="posJogo" onclick="jogar(1)"></div>
+        <div id="p2" class="posJogo" onclick="jogar(2)"></div>
+        <div id="p3" class="posJogo" onclick="jogar(3)"></div>
+        <div id="p4" class="posJogo" onclick="jogar(4)"></div>
+        <div id="p5" class="posJogo" onclick="jogar(5)"></div>
+        <div id="p6" class="posJogo" onclick="jogar(6)"></div>
+        <div id="p7" class="posJogo" onclick="jogar(7)"></div>
+        <div id="p8" class="posJogo" onclick="jogar(8)"></div>
+        <div id="p9" class="posJogo" onclick="jogar(9)"></div>
     </div>
     
 </body>
