novos aprendizados e melhor organização

--- a/aula 56/index.html
+++ b/aula 56/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOGO DA VELHA P6</title>
+    <title>JOGO DA VELHA P5</title>
     <style>
         #dvjogo{
             width: 160px;
@@ -87,16 +87,16 @@
                     jogo[l][c]="O";
                 }else if(nivel==2){
                     //ATAQUE
-                    //jogadas linha 1
+                    //jogada linha 1
                     if((jogo[0][0]=="O")&&(jogo[0][1]=="O")&&(jogo[0][2]=="")){
-                        jogo[0][2]="O";
+                        jogo[0][2]=="O";
                     }else if((jogo[0][0]=="O")&&(jogo[0][2]=="O")&&(jogo[0][1]=="")){
                         jogo[0][1]=="O";
                     }else if((jogo[0][1]=="O")&&(jogo[0][2]=="O")&&(jogo[0][0]=="")){
                         jogo[0][0]=="O";
-                    }else 
+                    }else
                     //jogadas linha 2
-                    if((jogo[1][0]=="O")&&(jogo[1][1]=="O")&&(jogo[1][2]=="")){
+                    if((jogo[1][0]=="O")&&(jogo[1][1]=="O")&&(jogo[1][2]=="O")){
                         jogo[1][2]=="O";
                     }else if((jogo[1][0]=="O")&&(jogo[1][2]=="O")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
@@ -113,23 +113,23 @@
                     }else
                     //jogadas coluna 1
                     if((jogo[0][0]=="O")&&(jogo[1][0]=="O")&&(jogo[2][0]=="")){
-                        jogo[2][0]=="O"
+                        jogo[2][0]=="O";
                     }else if((jogo[0][0]=="O")&&(jogo[2][0]=="O")&&(jogo[1][0]=="")){
                         jogo[1][0]=="O";
                     }else if((jogo[1][0]=="O")&&(jogo[2][0]=="O")&&(jogo[0][0]=="")){
                         jogo[0][0]=="O";
-                    }else 
-                    //jogadas colunas 2
-                    if((jogo[0][1]=="O")&&(jogo[1][1]=="O")&&(jogo[2][1]=="")){
-                        jogo[2][1]=="O"
+                    }else
+                    //jogadas coluna 2
+                    if((jogo[0][1]=="O")&&(jogo[1][1]=="O")&&(jogo[2][1]=="O")){
+                        jogo[2][1]=="O";
                     }else if((jogo[0][1]=="O")&&(jogo[2][1]=="O")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
                     }else if((jogo[1][1]=="O")&&(jogo[2][1]=="O")&&(jogo[0][1]=="")){
                         jogo[0][1]=="O";
                     }else
-                    //jogadas colunas 3
+                    //jogadas coluna 3
                     if((jogo[0][2]=="O")&&(jogo[1][2]=="O")&&(jogo[2][2]=="")){
-                        jogo[2][2]=="O"
+                        jogo[2][2]=="O";
                     }else if((jogo[0][2]=="O")&&(jogo[2][2]=="O")&&(jogo[1][2]=="")){
                         jogo[1][2]=="O";
                     }else if((jogo[1][2]=="O")&&(jogo[2][2]=="O")&&(jogo[0][2]=="")){
@@ -137,7 +137,7 @@
                     }else
                     //jogadas diagonal 1
                     if((jogo[0][0]=="O")&&(jogo[1][1]=="O")&&(jogo[2][2]=="")){
-                        jogo[2][2]=="O"
+                        jogo[2][2]=="O";
                     }else if((jogo[0][0]=="O")&&(jogo[2][2]=="O")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
                     }else if((jogo[1][1]=="O")&&(jogo[2][2]=="O")&&(jogo[0][0]=="")){
@@ -145,24 +145,23 @@
                     }else
                     //jogadas diagonal 2
                     if((jogo[0][2]=="O")&&(jogo[1][1]=="O")&&(jogo[2][0]=="")){
-                        jogo[2][0]=="O"
+                        jogo[2][0]=="O";
                     }else if((jogo[0][2]=="O")&&(jogo[2][0]=="O")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
-                    }else if((jogo[2][0]=="O")&&(jogo[1][1]=="O"
-                    )&&(jogo[0][2]=="")){
+                    }else if((jogo[1][1]=="O")&&(jogo[2][0]=="O")&&(jogo[0][2]=="")){
                         jogo[0][2]=="O";
                     }else
                     //DEFESA
-                    //jogadas linha 1
+                    //jogada linha 1
                     if((jogo[0][0]=="X")&&(jogo[0][1]=="X")&&(jogo[0][2]=="")){
-                        jogo[0][2]="O";
+                        jogo[0][2]=="O";
                     }else if((jogo[0][0]=="X")&&(jogo[0][2]=="X")&&(jogo[0][1]=="")){
                         jogo[0][1]=="O";
                     }else if((jogo[0][1]=="X")&&(jogo[0][2]=="X")&&(jogo[0][0]=="")){
                         jogo[0][0]=="O";
-                    }else 
-                    //jogadas linha 2
-                    if((jogo[1][0]=="X")&&(jogo[1][1]=="X")&&(jogo[1][2])==""){
+                    }else
+                    //jogadas linha X
+                    if((jogo[1][0]=="X")&&(jogo[1][1]=="X")&&(jogo[1][2]=="O")){
                         jogo[1][2]=="O";
                     }else if((jogo[1][0]=="X")&&(jogo[1][2]=="X")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
@@ -170,7 +169,7 @@
                         jogo[1][0]=="O";
                     }else
                     //jogadas linha 3
-                    if((jogo[2][0]=="X")&&(jogo[2][1]=="X")&&(jogo[2][2])==""){
+                    if((jogo[2][0]=="X")&&(jogo[2][1]=="X")&&(jogo[2][2]=="")){
                         jogo[2][2]=="O";
                     }else if((jogo[2][0]=="X")&&(jogo[2][2]=="X")&&(jogo[2][1]=="")){
                         jogo[2][1]=="O";
@@ -179,23 +178,23 @@
                     }else
                     //jogadas coluna 1
                     if((jogo[0][0]=="X")&&(jogo[1][0]=="X")&&(jogo[2][0]=="")){
-                        jogo[2][0]=="O"
+                        jogo[2][0]=="O";
                     }else if((jogo[0][0]=="X")&&(jogo[2][0]=="X")&&(jogo[1][0]=="")){
                         jogo[1][0]=="O";
                     }else if((jogo[1][0]=="X")&&(jogo[2][0]=="X")&&(jogo[0][0]=="")){
                         jogo[0][0]=="O";
                     }else
-                    //jogadas colunas 2
-                    if((jogo[0][1]=="X")&&(jogo[1][1]=="X")&&(jogo[2][1]=="")){
-                        jogo[2][1]=="O"
+                    //jogadas coluna 2
+                    if((jogo[0][1]=="X")&&(jogo[1][1]=="X")&&(jogo[2][1]=="O")){
+                        jogo[2][1]=="O";
                     }else if((jogo[0][1]=="X")&&(jogo[2][1]=="X")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
                     }else if((jogo[1][1]=="X")&&(jogo[2][1]=="X")&&(jogo[0][1]=="")){
                         jogo[0][1]=="O";
                     }else
-                    //jogadas colunas 3
+                    //jogadas coluna 3
                     if((jogo[0][2]=="X")&&(jogo[1][2]=="X")&&(jogo[2][2]=="")){
-                        jogo[2][2]=="O"
+                        jogo[2][2]=="O";
                     }else if((jogo[0][2]=="X")&&(jogo[2][2]=="X")&&(jogo[1][2]=="")){
                         jogo[1][2]=="O";
                     }else if((jogo[1][2]=="X")&&(jogo[2][2]=="X")&&(jogo[0][2]=="")){
@@ -203,7 +202,7 @@
                     }else
                     //jogadas diagonal 1
                     if((jogo[0][0]=="X")&&(jogo[1][1]=="X")&&(jogo[2][2]=="")){
-                        jogo[2][2]=="O"
+                        jogo[2][2]=="O";
                     }else if((jogo[0][0]=="X")&&(jogo[2][2]=="X")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
                     }else if((jogo[1][1]=="X")&&(jogo[2][2]=="X")&&(jogo[0][0]=="")){
@@ -211,10 +210,10 @@
                     }else
                     //jogadas diagonal 2
                     if((jogo[0][2]=="X")&&(jogo[1][1]=="X")&&(jogo[2][0]=="")){
-                        jogo[2][0]=="O"
+                        jogo[2][0]=="O";
                     }else if((jogo[0][2]=="X")&&(jogo[2][0]=="X")&&(jogo[1][1]=="")){
                         jogo[1][1]=="O";
-                    }else if((jogo[2][0]=="X")&&(jogo[1][1]=="X")&&(jogo[0][2]=="")){
+                    }else if((jogo[1][1]=="X")&&(jogo[2][0]=="X")&&(jogo[0][2]=="")){
                         jogo[0][2]=="O";
                     }else{
                         if(jogada<8){
@@ -227,14 +226,13 @@
                             for(var l=0;l<3;l++){
                                 for(var c=0;c<3;c++){
                                     if(jogo[l][c]==""){
-                                        jogo[l][c]="O";
+                                        jogo[l][c]="O"
                                     }
                                 }
                             }
                         }
                     }
                 }
-        
                 verifica=verificaVitoria();
                 if(verifica!=""){
                     alert(verifica+" venceu");
