--- a/aula 11 a 20/aula 11/index.html
+++ b/aula 11 a 20/aula 11/index.html
@@ -9,13 +9,13 @@
 <body>
     <script>
 
-        var num=9;
+        var nota = 11
 
-        if(num > 10) res="Maior que 10";
-        else res="Menor que 10";
+        if(nota > 10) res="maior que 10"
+        else res="menor que 10"
 
         document.write(res);
-        alert(res);
+        alert(res)
     </script>
 </body>
 </html>
