--- a/aula 67/index.html
+++ b/aula 67/index.html
@@ -9,8 +9,11 @@
     </style>
     <script>
 
-        function inicia(){
+        var painel;
 
+        function inicia(){
+            painel=document.getElementById("info");
+            painel.innerHTML=history.length;
         }
 
         window.addEventListener("load",inicia);
