--- a/aula 67/p2.html
+++ b/aula 67/p2.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 67</title>
+    <script>
+
+        var painel,btnB,btnF,btnG;
+
+        function hB(){
+            window.history.back();
+        }
+
+        function hF(){
+            window.history.forward();
+        }
+
+        function hG(){
+            window.history.go(-2);
+        }
+
+        function inicia(){
+            btnB=document.getElementById("btnback");
+            btnF=document.getElementById("btnForward");
+            btnG=document.getElementById("btnBack2");
+
+            btnB.addEventListener("click",hB);
+            btnF.addEventListener("click",hF);
+            btnG.addEventListener("click",hG);
+
+            painel=document.getElementById("info");
+            painel.innerHTML=history.length;
+        }
+
+        window.addEventListener("load",inicia);
+
+    </script>
 </head>
 <body>
-    <h1>p2.html</h1>
+    <h1>Página 2 - p2.html</h1>
+
+    <p id="info"></p>
+
+    <a href="index.html">Home</a>
+    <a href="p2.html">Página 2</a>
+    <a href="p3.html">Página 3</a><hr>
+    <button id="btnback">Voltar</button>
+    <button id="btnForward">Avançar</button>
+    <button id="btnBack2">Voltar 2</button>
 </body>
 </html>
