--- a/aula 67/p3.html
+++ b/aula 67/p3.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 67</title>
+    <script>
+
+        var painel,btnB,btnF,btnG;
+
+       
+        function hi(num){
+            window.history.go(num);
+        }
+
+        function inicia(){
+            btnB=document.getElementById("btnback");
+            btnF=document.getElementById("btnForward");
+            btnG=document.getElementById("btnBack2");
+
+            btnB.addEventListener("click",function(){
+                hi(-1);
+            });
+            btnF.addEventListener("click",function(){
+                hi(1);
+            });
+            btnG.addEventListener("click",function(){
+                hi(-2);
+            });
+
+            painel=document.getElementById("info");
+            painel.innerHTML=history.length;
+        }
+
+        window.addEventListener("load",inicia);
+
+    </script>
 </head>
 <body>
-    <h1>p3.html</h1>
+    <h1>Página 3 - p3.html</h1>
+    <p id="info"></p>
+
+    <a href="index.html">Home</a>
+    <a href="p2.html">Página 2</a>
+    <a href="p3.html">Página 3</a><hr>
+    <button id="btnback">Voltar</button>
+    <button id="btnForward">Avançar</button>
+    <button id="btnBack2">Voltar 2</button>
 </body>
 </html>
