--- a/aula 72/index.html
+++ b/aula 72/index.html
@@ -10,6 +10,7 @@
     <script>
 
         function pagina(pg){
+            sessionStorage.nome=document.getElementById("fnome").value;
             window.location.assign("p"+pg+".html");
         }   
         
@@ -21,6 +22,9 @@
             document.getElementById("btnP3").addEventListener("click",function (){
                 pagina(3);
             });
+            document.getElementById("btnLimpar").addEventListener("click",function (){
+                sessionStorage.clear
+            });
         }
         window.addEventListener("load",inicia);
     </script>
@@ -30,5 +34,6 @@
     <input type="text" name="fnome" id="fnome" size="20" maxlength="20"><br><br>
     <button id="btnP2">Página 2</button>
     <button id="btnP3">Página 3</button>
+    <button id="btnLimpar">Limpar SessionStorage</button>
 </body>
 </html>
