--- a/aula 72/p3.html
+++ b/aula 72/p3.html
@@ -12,9 +12,16 @@
     </style>
     <script>
 
+        function inicia(){
+            document.getElementById("painel").innerHTML=sessionStorage.nome;   
+        }
+        window.addEventListener("load",inicia);
+
     </script>
 </head>
 <body>
     <h2>Página 3</h2>
+    <div id="painel"></div>
+
 </body>
 </html>
